# SilkRoad

./: 00_extract_image_features.py  02_generate_and_rank.py  03_analyze_caption.py  04_filter_dataset.py  05_json_convert.py  09_filter_uzbek_cyrillic.py  10_QE_filter.py  11_split_languages.py  4model_QE_avg_filter.py  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
all_pipline/: 01_build_manifest_json.py  06_translate_all_lang_4model.py
caption_model_vs/: generation_internvl3-8b.py  generation_llava-1.5-7b.py  generation_llava-1.6-7b.py  generation_qwen2.5-vl-7b.py  generation_qwen3-vl-8b.py  internvl3-8b.jsonl  llava-1.5-7b.jsonl  qwen2.5-vl-7b.jsonl  qwen3-vl-8b.jsonl
configs/: paper_thresholds.yaml
experiments/analysis/: 01_analyze_caption_clip.py  02_single_trans_model_filter.py  03_analyze_4_models_average.py  04_silkroad_len_analysis.py
experiments/caption_model_vs/: 01_generation_qwen3-vl-8b.py  02_generation_qwen2.5-vl-7b.py  03_generation_internvl3-8b.py  04_generation_llava-1.6-7b.py  05_generation_llava-1.5-7b.py  06_analysis.py
experiments/human_eval_4_lang/: split_only_ours.py
human_eval_4_lang/: split_only_ours.py
models/: model.txt
pipelines/: 00_extract_image_features.py  01_build_manifest_json.py  02_generate_and_rank.py  06_translate_all_lang_4model.py  07_b_back_translate.py  08_quality_estimation.py  10_QE_filter.py  11_split_languages.py
scripts/: run_full_pipeline.sh
translation_model_vs/: 02_b_back_translate.py  03_quality_estimation.py
visualization/: three_score.py  word_length.py
(+50 files in other folders)
