[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "silkroad-mmt-dataset-builder"
version = "0.1.0"
description = "Anonymous reproducibility package for multilingual multimodal dataset construction."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
